--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -116,6 +116,14 @@
         width: 0;
         height: 0;
   }
+
+  .vue-tel-input {
+    border-radius: 9999px !important;
+    
+    border: 1px solid #bbb !important;
+
+    height: 52px !important;
+  }
   
   
 }
